cluster/gitops/storage/zfs/pool-scrubber/daemonset.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: &app_name zfs-pool-scrubber
  labels: &labels
    app.kubernetes.io/name: *app_name
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      hostPID: true
      nodeSelector:
        zfs.home.arpa/node.local-storage-scrub: "true"
      containers:
        - name: *app_name
          image: alpine/k8s:1.37.1
          command:
            - /scripts/scrub-zfs-pool.sh
          securityContext:
            # Needed for zpool creation
            privileged: true
          volumeMounts:
            - name: rootfs
              mountPath: *rootfs_path
            - name: scripts
              readOnly: true
              mountPath: /scripts
      volumes:
        - name: rootfs
          hostPath:
            path: /
        - name: scripts
          configMap:
            name: zfs-pool-scrubber-scripts
            defaultMode: 0500
      serviceAccountName: *app_name
